cluster/apps/static/hass/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-external
  namespace: networking
  annotations:
    external-dns.home.arpa/enabled: "true"
    hajimari.io/icon: "home-assistant"
spec:
  ingressClassName: nginx
  rules:
    - host: &host ha.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hass
                port:
                  number: 443
  tls:
    - hosts:
        - *host
